--- a/src/enchant/meson.build
+++ b/src/enchant/meson.build
@@ -1,6 +1,14 @@
+if get_option('enchant').enabled()
+
+libenchant_dep = dependency('enchant-2', version: enchant_req)
+
 editor_deps += [libenchant_dep, libicu_dep]
 
 editor_sources += files([
   'editor-enchant-spell-language.c',
   'editor-enchant-spell-provider.c',
 ])
+
+editor_c_args += ['-DHAVE_ENCHANT']
+
+endif
