gitlab-ci: ignore enchant on macOS

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,6 +66,7 @@ macos:
                 -Dgtk:build-examples=false
                 -Dgtk:build-tests=false
                 -Dcpp_std=c++11
+                -Denchant=disabled
                 -Dpixman:tests=disabled
                 -Dglib:werror=false
                 -Dgtksourceview:werror=false
