--- a/meson.build
+++ b/meson.build
@@ -170,5 +170,5 @@ configure_file(
 gnome.post_install(
   gtk_update_icon_cache: true,
   glib_compile_schemas: true,
-  update_desktop_database: true,
+  update_desktop_database: host_machine.system() not in ['darwin', 'windows'],
 )
