gitlab-ci: remove introspection from libadwaita

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,6 +73,7 @@ macos:
                 -Dgtk:werror=false
                 -Dlibadwaita:werror=false
                 -Dlibadwaita:gtk_doc=false
+                -Dlibadwaita:introspection=false
                 -Dlibadwaita:vapi=false
                 -Dlibadwaita:examples=false
                 -Dlibadwaita:tests=false
