--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,7 +73,7 @@ macos:
                 -Dgtk:werror=false
                 -Dlibadwaita:werror=false
                 -Dlibadwaita:gtk_doc=false
-                -Dlibadwaita:introspection=false
+                -Dlibadwaita:introspection=disabled
                 -Dlibadwaita:vapi=false
                 -Dlibadwaita:examples=false
                 -Dlibadwaita:tests=false
