gitlab-ci: use disabled for introspection

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,7 +59,7 @@ fedora:
                 -Dlibadwaita:werror=false
                 -Dlibsass:werror=false
                 -Dpango:gtk_doc=false
-                -Dpango:introspection=false
+                -Dpango:introspection=disabled
                 -Dpango:werror=false
                 -Dsassc:werror=false
                 -Dwayland-protocols:tests=false
