settings: add indent-style helper
This makes it easier to bind to actions with roles.

--- a/src/meson.build
+++ b/src/meson.build
@@ -70,6 +70,7 @@ editor_sources += gnome.compile_resources('editor-resources',
 
 editor_enums_headers = [
   'editor-search-bar-private.h',
+  'editor-types.h',
 ]
 
 editor_enums = gnome.mkenums_simple('editor-enums',
