--- a/src/enchant/meson.build
+++ b/src/enchant/meson.build
@@ -1,6 +1,7 @@
 if get_option('enchant').enabled()
 
 libenchant_dep = dependency('enchant-2', version: enchant_req)
+libicu_dep = dependency('icu-uc')
 
 editor_deps += [libenchant_dep, libicu_dep]
 
