--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -19,10 +19,25 @@
 
   <screenshots>
     <screenshot type="default">
-      <caption></caption>
-      <image width="1938" height="1662">https://gitlab.gnome.org/GNOME/gnome-text-editor/raw/4873be0588ea7dbb0a9852e02710f2d42f6749c7/data/appdata/text-editor-1.png</image>
-      <image width="1938" height="1662">https://gitlab.gnome.org/GNOME/gnome-text-editor/raw/4873be0588ea7dbb0a9852e02710f2d42f6749c7/data/appdata/text-editor-2.png</image>
-      <image width="1938" height="1662">https://gitlab.gnome.org/GNOME/gnome-text-editor/raw/4873be0588ea7dbb0a9852e02710f2d42f6749c7/data/appdata/text-editor-3.png</image>
+      <image>https://gitlab.gnome.org/GNOME/gnome-text-editor/raw/82c4c1b9eeb9f88d651a5ff7bc1ec2573069b68d/data/screenshots/text-editor-main.png</image>
+    </screenshot>
+    <screenshot>
+      <image>https://gitlab.gnome.org/GNOME/gnome-text-editor/raw/82c4c1b9eeb9f88d651a5ff7bc1ec2573069b68d/data/screenshots/text-editor-menu.png</image>
+    </screenshot>
+    <screenshot>
+      <image>https://gitlab.gnome.org/GNOME/gnome-text-editor/raw/82c4c1b9eeb9f88d651a5ff7bc1ec2573069b68d/data/screenshots/text-editor-multitabs.png</image>
+    </screenshot>
+    <screenshot>
+      <image>https://gitlab.gnome.org/GNOME/gnome-text-editor/raw/82c4c1b9eeb9f88d651a5ff7bc1ec2573069b68d/data/screenshots/text-editor-open-files.png</image>
+    </screenshot>
+    <screenshot>
+      <image>https://gitlab.gnome.org/GNOME/gnome-text-editor/raw/82c4c1b9eeb9f88d651a5ff7bc1ec2573069b68d/data/screenshots/text-editor-open-recent.png</image>
+    </screenshot>
+    <screenshot>
+      <image>https://gitlab.gnome.org/GNOME/gnome-text-editor/raw/82c4c1b9eeb9f88d651a5ff7bc1ec2573069b68d/data/screenshots/text-editor-preferences.png</image>
+    </screenshot>
+    <screenshot>
+      <image>https://gitlab.gnome.org/GNOME/gnome-text-editor/raw/82c4c1b9eeb9f88d651a5ff7bc1ec2573069b68d/data/screenshots/text-editor-view.png</image>
     </screenshot>
   </screenshots>
 
