--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -44,6 +44,7 @@
   <translation type="gettext">org.gnome.TextEditor</translation>
 
   <releases>
+    <release version="42.1" date="2022-04-21"/>
     <release version="42.0" date="2022-03-18"/>
   </releases>
 
