data: Advertise the application adjusts to small screens
Advertise the app is touch usable, fits on small displays and is thus
usable on desktop and mobile.

--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -34,6 +34,16 @@
 
   <translation type="gettext">gnome-text-editor</translation>
 
+  <recommends>
+    <control>pointing</control>
+    <control>keyboard</control>
+    <control>touch</control>
+  </recommends>
+
+  <requires>
+    <display_length compare="ge">360</display_length>
+  </requires>
+
   <releases>
     <release version="47.0" date="2024-09-13"/>
   </releases>
