--- a/data/org.gnome.TextEditor.desktop.in.in
+++ b/data/org.gnome.TextEditor.desktop.in.in
@@ -15,6 +15,8 @@ StartupNotify=true
 Terminal=false
 Type=Application
 X-Flatpak-RenamedFrom=gnome-text-editor
+# Translators: Do NOT translate or transliterate this text (these are enum types)!
+X-Purism-FormFactor=Workstation;Mobile;
 Actions=new-window;
 
 [Desktop Action new-window]
