test crun runner

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,8 @@ flatpak:
         APP_ID: "org.gnome.TextEditor.Devel"
         RUNTIME_REPO: "https://nightly.gnome.org/gnome-nightly.flatpakrepo"
         BUNDLE: "org.gnome.TextEditor.Devel.flatpak"
+    tags:
+       - crun
     extends: .flatpak
 
 nightly:
