desktop: Add Keywords write and notepad
See https://gitlab.gnome.org/GNOME/gedit/-/merge_requests/121

--- a/data/org.gnome.TextEditor.desktop.in.in
+++ b/data/org.gnome.TextEditor.desktop.in.in
@@ -1,5 +1,6 @@
 [Desktop Entry]
 Categories=GNOME;GTK;Utility;TextEditor;
+Keywords=write;notepad;
 DBusActivatable=true
 Exec=gnome-text-editor %U
 MimeType=text/plain;
