build: switch to libeditorconfig
We don't need our vendored libeditorconfig anymore now that the upstream
version is more widely available. More importantly, it's moved on to
PCRE2 and we want to drop PCRE1 altogether now that GLib has too.

--- a/src/meson.build
+++ b/src/meson.build
@@ -96,8 +96,7 @@ subdir('editorconfig')
 
 editor = executable('gnome-text-editor', editor_sources + editor_enums + [build_ident_h],
   include_directories: [include_directories('..'),
-                        include_directories('editorconfig'),
-                        include_directories('editorconfig/libeditorconfig')],
+                        include_directories('editorconfig')],
                c_args: editor_c_args,
          dependencies: editor_deps,
               install: true,
