.gitlab-ci.yml: install editorconfig-devel

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,6 +43,7 @@ fedora:
                 libjpeg-turbo-devel
                 libpng-devel
                 shared-mime-info
+                editorconfig-devel
         - mkdir -p pfx/
         - meson --prefix=${PWD}/pfx
                 -Dwerror=true
