--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -3,7 +3,7 @@
 	<id>@app_id@.desktop</id>
 	<metadata_license>CC0-1.0</metadata_license>
 	<project_license>GPL-3.0-or-later</project_license>
-  <developer_name>Christian Hergert, et al.</developer_name>
+  <developer_name>The GNOME Project</developer_name>
   <launchable type="desktop-id">org.gnome.TextEditor.desktop</launchable>
   <name>Text Editor</name>
   <project_group>GNOME</project_group>
