--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -7,7 +7,7 @@
   <launchable type="desktop-id">org.gnome.TextEditor.desktop</launchable>
   <name>Text Editor</name>
   <project_group>GNOME</project_group>
-  <summary>A Text Editor for GNOME</summary>
+  <summary>Edit text files</summary>
   <description>
     <p>GNOME Text Editor is a simple text editor focused on a pleasing default experience.</p>
 	</description>
