appdata: Update screenshots for GNOME 43
Remove the old screenshots and replace them with new screenshots
hosted on static.gnome.org.

These new screenshots are different, as they do not include popovers
or dialogs. See the latest guidelines:
https://gitlab.gnome.org/GNOME/Initiatives/-/wikis/Update-App-Screenshots

Part of https://gitlab.gnome.org/GNOME/Initiatives/-/issues/34

--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -19,25 +19,10 @@
 
   <screenshots>
     <screenshot type="default">
-      <image>https://gitlab.gnome.org/GNOME/gnome-text-editor/raw/82c4c1b9eeb9f88d651a5ff7bc1ec2573069b68d/data/screenshots/text-editor-main.png</image>
+      <image>https://static.gnome.org/appdata/gnome-43/text-editor/text-editor-1.png</image>
     </screenshot>
     <screenshot>
-      <image>https://gitlab.gnome.org/GNOME/gnome-text-editor/raw/82c4c1b9eeb9f88d651a5ff7bc1ec2573069b68d/data/screenshots/text-editor-menu.png</image>
-    </screenshot>
-    <screenshot>
-      <image>https://gitlab.gnome.org/GNOME/gnome-text-editor/raw/82c4c1b9eeb9f88d651a5ff7bc1ec2573069b68d/data/screenshots/text-editor-multitabs.png</image>
-    </screenshot>
-    <screenshot>
-      <image>https://gitlab.gnome.org/GNOME/gnome-text-editor/raw/82c4c1b9eeb9f88d651a5ff7bc1ec2573069b68d/data/screenshots/text-editor-open-file.png</image>
-    </screenshot>
-    <screenshot>
-      <image>https://gitlab.gnome.org/GNOME/gnome-text-editor/raw/82c4c1b9eeb9f88d651a5ff7bc1ec2573069b68d/data/screenshots/text-editor-open-recent.png</image>
-    </screenshot>
-    <screenshot>
-      <image>https://gitlab.gnome.org/GNOME/gnome-text-editor/raw/82c4c1b9eeb9f88d651a5ff7bc1ec2573069b68d/data/screenshots/text-editor-preferences.png</image>
-    </screenshot>
-    <screenshot>
-      <image>https://gitlab.gnome.org/GNOME/gnome-text-editor/raw/82c4c1b9eeb9f88d651a5ff7bc1ec2573069b68d/data/screenshots/text-editor-view.png</image>
+      <image>https://static.gnome.org/appdata/gnome-43/text-editor/text-editor-2.png</image>
     </screenshot>
   </screenshots>
 
