.gitlab-ci.yml: add win32 mingw build to CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -80,6 +80,17 @@ fedora:
         - meson test --suite gnome-text-editor
         - ninja install
 
+msys2-mingw64:
+
+    tags:
+      - win32-ps
+    script: |
+
+      $env:CHERE_INVOKING = 'yes' #preserve cwd
+      $env:MSYSTEM = 'MINGW64'
+      C:/msys64/usr/bin/bash -lc "./build-aux/win32/build-mingw.sh"
+
+
 #macos:
 #    extends: .only-default
 #    only:
