build: bump for 44 development
Should have done this before merging, but we have a new gnome-43 branch
now and can be open for new features/etc.

--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,6 @@
 project('gnome-text-editor', 'c',
-          version: '43.1',
-    meson_version: '>= 0.59.1',
+          version: '44.alpha',
+    meson_version: '>= 0.60.0',
   default_options: [ 'warning_level=2', 'c_std=gnu17' ],
 )
 
