desktop: register application/x-zerosize MimeType in desktop file
Fixes #486

--- a/data/org.gnome.TextEditor.desktop.in.in
+++ b/data/org.gnome.TextEditor.desktop.in.in
@@ -3,7 +3,7 @@ Categories=GNOME;GTK;Utility;TextEditor;
 Keywords=write;notepad;
 DBusActivatable=true
 Exec=gnome-text-editor %U
-MimeType=text/plain;
+MimeType=text/plain;application/x-zerosize;
 Name=Text Editor
 GenericName=Text Editor
 Comment=View and edit text files
