focus-chain: add helper to implement focus chains
This was a lost part of GTK 4 from 3 and it is handy to be able to control
the explicit focus chain you want.

--- a/src/meson.build
+++ b/src/meson.build
@@ -8,8 +8,9 @@ editor_sources = [
   'editor-document.c',
   'editor-info-bar.c',
   'editor-empty-spell-provider.c',
-  'editor-frame-source.c',
   'editor-file-manager.c',
+  'editor-focus-chain.c',
+  'editor-frame-source.c',
   'editor-joined-menu.c',
   'editor-language-dialog.c',
   'editor-language-row.c',
