--- a/meson.build
+++ b/meson.build
@@ -45,6 +45,8 @@ libgtk_dep = dependency('gtk4', version: gtk_req)
 libgtksourceview_dep = dependency('gtksourceview-5', version: gtksourceview_req)
 libadwaita_dep = dependency('libadwaita-1', version: '>= 1.2.alpha')
 libeditorconfig_dep = dependency('editorconfig')
+libcairo_dep = dependency('cairo')
+libicu_dep = dependency('icu-uc')
 
 # Specify minimum library versions
 glib_major = glib_req_version.split('.')[0].to_int()
