appdata: add missing release

--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -29,6 +29,7 @@
   <translation type="gettext">org.gnome.TextEditor</translation>
 
   <releases>
+    <release version="43.2" date="2023-01-10"/>
     <release version="43.1" date="2022-10-04"/>
     <release version="43.0" date="2022-09-17"/>
     <release version="42.2" date="2022-06-12"/>
