--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -3,6 +3,8 @@
 data/org.gnome.TextEditor.appdata.xml.in.in
 data/org.gnome.TextEditor.desktop.in.in
 data/org.gnome.TextEditor.gschema.xml
+data/styles/builder.xml
+data/styles/printing.xml
 src/editor-animation.c
 src/editor-application-actions.c
 src/editor-application.c
@@ -24,6 +26,7 @@ src/editor-save-changes-dialog.c
 src/editor-search-bar.ui
 src/editor-search-entry.c
 src/editor-sidebar-item.c
+src/editor-sidebar-row.ui
 src/editor-spell-menu.c
 src/editor-theme-selector.ui
 src/editor-utils.c
