ci: Add aarch64 CI and nightly jobs
Now that we have aarch64 runners available to all
applications, we can use them to run CI jobs
and upload nightly versions of Text Editor
for aarch64. This is particularly useful
for testing the app on systems like the Pinebook Pro
or phones running GNOME.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,12 @@ include:
 
 variables:
     FEDORA_IMAGE: "registry.gitlab.gnome.org/gnome/gtksourceview/fedora:latest"
+    MANIFEST_PATH: "org.gnome.TextEditor.Devel.json"
+    MESON_ARGS: "-Ddevelopment=true"
+    FLATPAK_MODULE: "gnome-text-editor"
+    APP_ID: "org.gnome.TextEditor.Devel"
+    RUNTIME_REPO: "https://nightly.gnome.org/gnome-nightly.flatpakrepo"
+    BUNDLE: "org.gnome.TextEditor.Devel.flatpak"
 
 .only-default:
     only:
@@ -12,20 +18,21 @@ variables:
         - tags
 
 flatpak:
-    variables:
-        MANIFEST_PATH: "org.gnome.TextEditor.Devel.json"
-        MESON_ARGS: "-Ddevelopment=true"
-        FLATPAK_MODULE: "gnome-text-editor"
-        APP_ID: "org.gnome.TextEditor.Devel"
-        RUNTIME_REPO: "https://nightly.gnome.org/gnome-nightly.flatpakrepo"
-        BUNDLE: "org.gnome.TextEditor.Devel.flatpak"
-    extends: .flatpak
+    extends: '.flatpak@x86_64'
+
+flatpak-aarch64:
+    extends: '.flatpak@aarch64'
 
 nightly:
     extends: '.publish_nightly'
     needs: ['flatpak']
     dependencies: ['flatpak']
     
+nightly-aarch64:
+    extends: '.publish_nightly'
+    needs: ['flatpak-aarch64']
+    dependencies: ['flatpak-aarch64']
+
 fedora:
     extends: .only-default
     only:
