build: link explicitely against cairo
We use cairo API directly, so ensure that we include it in our deps.

--- a/src/meson.build
+++ b/src/meson.build
@@ -62,6 +62,7 @@ editor_deps = [
   libgtk_dep,
   libgtksourceview_dep,
   libadwaita_dep,
+  libcairo_dep,
 ]
 
 editor_sources += gnome.compile_resources('editor-resources',
