--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -29,7 +29,7 @@
   <translation type="gettext">org.gnome.TextEditor</translation>
 
   <releases>
-    <release version="44.beta" date="2023-02-15"/>
+    <release version="44.0" date="2023-03-17"/>
     <release version="43.2" date="2023-01-10"/>
     <release version="43.1" date="2022-10-04"/>
     <release version="43.0" date="2022-09-17"/>
