--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -13,6 +13,7 @@ src/editor-file-manager.c
 src/editor-info-bar.c
 src/editor-info-bar.ui
 src/editor-language-dialog.ui
+src/editor-language-row.c
 src/editor-open-popover.ui
 src/editor-page.c
 src/editor-page.ui
