appdata: update some URLs
- Add vcs-browser URL.
- Update the donation URL.

These URLs are visible on GNOME Control Center and Flathub.

More information: https://www.freedesktop.org/software/appstream/docs/chap-Metadata.html#tag-url

--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -14,8 +14,9 @@
 
   <url type="homepage">https://gitlab.gnome.org/GNOME/gnome-text-editor</url>
   <url type="bugtracker">https://gitlab.gnome.org/GNOME/gnome-text-editor/issues</url>
-  <url type="donation">http://www.gnome.org/friends/</url>
+  <url type="donation">https://www.gnome.org/donate/</url>
   <url type="translate">https://wiki.gnome.org/TranslationProject</url>
+  <url type="vcs-browser">https://gitlab.gnome.org/GNOME/gnome-text-editor</url>
 
   <screenshots>
     <screenshot type="default">
