--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,5 @@
 project('gnome-text-editor', 'c',
-          version: '45.0',
+          version: '46.alpha',
     meson_version: '>= 0.60.0',
   default_options: [ 'warning_level=2', 'c_std=gnu17' ],
 )
