--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -30,7 +30,7 @@
   <translation type="gettext">org.gnome.TextEditor</translation>
 
   <releases>
-    <release version="45.alpha" date="2023-06-30"/>
+    <release version="45.1" date="2023-10-30"/>
   </releases>
 
   <kudos>
