appdata: Fix translation type file name
The real file is "gnome-text-editor".

This patch fixes annoying "This app will appear in US English" warning
in GNOME Software.

--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -27,7 +27,7 @@
     </screenshot>
   </screenshots>
 
-  <translation type="gettext">org.gnome.TextEditor</translation>
+  <translation type="gettext">gnome-text-editor</translation>
 
   <releases>
     <release version="45.1" date="2023-10-30"/>
