--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -27,7 +27,7 @@
     </screenshot>
   </screenshots>
 
-  <translation type="gettext">org.gnome.TextEditor</translation>
+  <translation type="gettext">gnome-text-editor</translation>
 
   <releases>
     <release version="45.alpha" date="2023-06-30"/>
