Fix the Windows pipeline and make it more versatile.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,17 +88,16 @@ fedora:
         - ninja install
 
 msys2-mingw64:
-
     tags:
       - win32-ps
     script: |
-
       $env:CHERE_INVOKING = 'yes' #preserve cwd
       $env:MSYSTEM = 'MINGW64'
       C:/msys64/usr/bin/bash -lc "./build-aux/win32/build-mingw.sh"
     artifacts:
         paths:
-            - ./*.zip
+            - './*.zip'
+        when: always
 
 #macos:
 #    extends: .only-default
