appdata: Use the launchabe that corresponds to the app-id

--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -8,7 +8,7 @@
   <developer id="gnome.org">
     <name>The GNOME Project</name>
   </developer>
-  <launchable type="desktop-id">org.gnome.TextEditor.desktop</launchable>
+  <launchable type="desktop-id">@app_id@.desktop</launchable>
   <name>Text Editor</name>
   <project_group>GNOME</project_group>
   <summary>Edit text files</summary>
