desktop: add new-window action
Fixes #642

--- a/data/org.gnome.TextEditor.desktop.in.in
+++ b/data/org.gnome.TextEditor.desktop.in.in
@@ -13,3 +13,8 @@ StartupNotify=true
 Terminal=false
 Type=Application
 X-Flatpak-RenamedFrom=gnome-text-editor
+Actions=new-window;
+
+[Desktop Action new-window]
+Name=New Window
+Exec=gnome-text-editor --new-window
