--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -30,6 +30,8 @@
   <translation type="gettext">gnome-text-editor</translation>
 
   <releases>
+    <release version="45.3" date="2024-01-22"/>
+    <release version="45.2" date="2024-01-15"/>
     <release version="45.1" date="2023-10-30"/>
   </releases>
 
