build: fix CI issues
- Rename gtksourceview meson option gtk_doc -> documentation
- Don't replace latest installed libraries by old msys2 ones in Win32 build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,7 +74,7 @@ fedora:
                 -Dgtk:demos=false
                 -Dgtk:media-gstreamer=disabled
                 -Dgtk:werror=false
-                -Dgtksourceview:gtk_doc=false
+                -Dgtksourceview:documentation=false
                 -Dgtksourceview:introspection=disabled
                 -Dgtksourceview:vapi=false
                 -Dgtksourceview:werror=false
@@ -151,7 +151,7 @@ msys2-ucrt64:
 #                -Dgtk:media-gstreamer=disabled
 #                -Dgtk:werror=false
 #                -Dgtk:x11-backend=false
-#                -Dgtksourceview:gtk_doc=false
+#                -Dgtksourceview:documentation=false
 #                -Dgtksourceview:introspection=disabled
 #                -Dgtksourceview:vapi=false
 #                -Dgtksourceview:werror=false
